# logic

./: .gitignore  AUTHORS  NEWS  README.md  configure.ac  meson.build
res/: Makefile.am  abt-dlg.ui  app-menu.ui  gresource.xml  help-dlg.ui  intro-dlg.ui  logic.desktop  meson.build
src/: Capture.cpp  Capture.hpp  DeviceCapture.cpp  DeviceCapture.hpp  DisplayTree.cpp  DisplayTree.hpp  LogicApp.cpp  LogicApp.hpp  LogicDrawing.cpp  LogicDrawing.hpp  LogicWindow.cpp  LogicWindow.hpp  Makefile.am  ModelColums.cpp  ModelColums.hpp  SetupAssist.cpp  SetupAssist.hpp  Timescale.cpp  Timescale.hpp  UserCapture.cpp  UserCapture.hpp  bcm2835_gpio.c  bcm2835_gpio.h  meson.build
